# Diff-Text

./: .gitignore  CHANGELOG.md  DECISIONS.md  PLAN.md  README.md  index.html  package-lock.json  package.json  setup.bat  setup.sh  todo_plan.md  tsconfig.tsbuildinfo  vite.config.ts
.claude/: launch.json  settings.local.json
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/components/: Titlebar.tsx
